# rs-handstrength

./: Cargo.toml  readme.md
src/: can_flush.rs  can_fullhouse.rs  can_highcard.rs  can_libs.rs  can_pair.rs  can_quads.rs  can_str.rs  can_strflush.rs  can_trips.rs  can_twopair.rs  card.rs  equity.rs  get_nut_rank.rs  get_winner.rs  lib.rs  outs_strflush.rs  pf_rank.rs  sorting.rs
src/tests/: basic.rs  can_flush.rs  can_have_flush.rs  can_have_fullhouse.rs  can_have_pair.rs  can_have_quads.rs  can_have_str.rs  can_have_strflush.rs  can_have_trips.rs  can_have_twopairs.rs  can_highcard.rs  mod.rs  test_equity.rs
src/tests/snapshots/: rs_handstrength__tests__can_have_fullhouse__tests__fh_with_2pair_board.snap  rs_handstrength__tests__can_have_pair__tests__pair2_board.snap  rs_handstrength__tests__can_have_quads__tests__quads_with_one_pair_board.snap  rs_handstrength__tests__can_have_quads__tests__quads_with_trips_board.snap  rs_handstrength__tests__can_have_quads__tests__quads_with_two_pair_board.snap  rs_handstrength__tests__can_have_str__tests__can_str1.snap  rs_handstrength__tests__can_have_str__tests__can_str2.snap  rs_handstrength__tests__can_have_str__tests__can_str3.snap  rs_handstrength__tests__can_have_str__tests__can_str4.snap  rs_handstrength__tests__can_have_str__tests__can_str5.snap  rs_handstrength__tests__can_have_strflush__tests__cal_gaps1.snap  rs_handstrength__tests__can_have_strflush__tests__cal_gaps12.snap  rs_handstrength__tests__can_have_strflush__tests__cal_gaps21-2.snap  rs_handstrength__tests__can_have_strflush__tests__one_strflush-2.snap  (+40 more)
