[package]
name = "rs_handstrength"
version = "0.1.0"
edition = "2021"
authors = ["Hansel Ke"]
description = "relative to board omaha hand strength calculator"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
insta = "1.34.0"
itertools = "0.12.0"
