[package]
name = "rs_handstrength"
version = "0.6.1"
edition = "2021"
authors = ["Hansel Ke"]
description = "relative to board omaha hand strength calculator and equity on flop"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
insta = "1.34.0"
itertools = "0.12.0"
lazy_static = "1.4.0"
rayon = "1.8.1"
serde = { version="1.0.196", features=["derive"] }
serde_json = "1.0.113"
